--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- Productos -->
     <main>
-      <input id="inputBuscar" type="text" placeholder="Buscar productos..." />
+      <input id="inputBuscar" type="text" placeholder="Ingrese nombre del producto..." />
       <div id="productos">
         <!-- Productos cargados en la base de datos -->
       </div>
